opa/opa-constraints.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
 name: container-must-have-limits
spec:
 match:
   kinds:
     - apiGroups: [""]
       kinds: ["Pod"]
 parameters:
   cpu: "200m"
   memory: "1Gi"

---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredProbes
metadata:
 name: must-have-probes
spec:
 match:
   kinds:
     - apiGroups: [""]
       kinds: ["Pod"]
 parameters:
   probes: ["readinessProbe", "livenessProbe"]
   probeTypes: ["tcpSocket", "httpGet", "exec"]
